# tytan

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
docs/qubo_benchmark_framework/: 20260316_polish_rounds.md
output/tmp/: bench_hybrid_sa.json
tests/adaptive_sa/: README.md  test_adaptive_bulk_sa.py  test_clamp_manager.py  test_delta_evaluator.py  test_mip_presolved_adaptive_bulk_sa.py  test_numeric_normalizer.py  test_presolve_reducer.py  test_presolved_adaptive_bulk_sa.py  test_probing_engine.py  test_reduced_qubo_mapper.py  test_reference_sa.py  test_solution_pool.py  test_strategy_manager.py
tests/rust/: PAIRWISE_TEST_CASES.md  RUST_BOTTLENECK_ANALYSIS_20260417.md  RUST_PHASE1_PERFORMANCE_REPORT_20260417.md  TEST_ITEMS.md  test_adaptive_bulk_rust_batch_path.py  test_adaptive_bulk_rust_core.py  test_pairwise_rust_cases.py  test_rust_backend_fallback.py  test_rust_backend_parity.py  test_rust_backend_result_format.py  test_rust_types_helpers.py  test_sampler_rust_integration.py
tests/sampler/: test_nqs_local_sampler.py  test_nqs_sampler.py  test_sa_sampler.py  test_zeke_sampler.py
tools/: .gitignore  bench_hybrid_sa.py  bench_phase3.py
tytan/: __init__.py  _rust_backend.py  _rust_types.py  sampler.py
tytan/adaptive_sa/: __init__.py  adaptive_bulk_sa.py  anneal_logger.py  clamp_manager.py  delta_evaluator.py  mip_presolved_adaptive_bulk_sa.py  numeric_normalizer.py  presolve_reducer.py  presolved_adaptive_bulk_sa.py  probing_engine.py  reduced_qubo_mapper.py  reference_sa.py  solution_pool.py  sparse_qubo.py  strategy_manager.py
tytan/rust/tytan_core/: Cargo.toml  README.md
tytan/rust/tytan_core/src/: adaptive.rs  anneal.rs  delta.rs  lib.rs  phase2.rs  pool.rs  presolve.rs  reduce.rs  sparse.rs  types.rs
